add some python ports

--- a/net/Makefile
+++ b/net/Makefile
@@ -176,11 +176,13 @@ SUBDIR += py-s3transfer
 SUBDIR += py-siosocks
 SUBDIR += py-speedtest-cli
 SUBDIR += py-trio
+SUBDIR += py-trio-websocket
 SUBDIR += py-twitter-tools
 SUBDIR += py-uritemplate
 SUBDIR += py-uritools
 SUBDIR += py-urllib3
 SUBDIR += py-url-normalize
+SUBDIR += py-wsproto
 SUBDIR += qt5-network
 SUBDIR += qt5-networkauth
 SUBDIR += qt6-networkauth
