--- a/science/Makefile
+++ b/science/Makefile
@@ -12,5 +12,6 @@ SUBDIR += py-scikit-learn
 SUBDIR += py-scikit-sparse
 SUBDIR += py-scipy
 SUBDIR += szip
+SUBDIR += trilinos
 
 .include <bsd.port.subdir.mk>
