--- a/devel/highway/Makefile
+++ b/devel/highway/Makefile
@@ -16,4 +16,6 @@ GH_ACCOUNT=	google
 CMAKE_ON=	BUILD_SHARED_LIBS HWY_SYSTEM_GTEST
 CMAKE_OFF+=	${CMAKE_TESTING_ON}
 
+NO_TEST=	yes
+
 .include <bsd.port.mk>
