--- a/math/p5-Math-Base36/Makefile
+++ b/math/p5-Math-Base36/Makefile
@@ -6,8 +6,9 @@ PKGNAMEPREFIX=	p5-
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Encoding and decoding of base36 strings
+WWW=		https://metacpan.org/release/Math-Base36
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 LICENSE_FILE=	${WRKSRC}/README
 
