--- a/multimedia/svt-av1/Makefile
+++ b/multimedia/svt-av1/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	svt-av1
 DISTVERSIONPREFIX=	v
-DISTVERSION=	2.0.0
+DISTVERSION=	2.1.2
 CATEGORIES=	multimedia
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -21,8 +21,8 @@ USE_GITLAB=	yes
 USE_LDCONFIG=	yes
 GL_ACCOUNT=	AOMediaCodec
 GL_PROJECT=	SVT-AV1
-CMAKE_ON=	ENABLE_NASM
 CMAKE_OFF=	NATIVE
+PLIST_SUB=	VERSION=${DISTVERSION:C/-.*//}
 
 OPTIONS_DEFINE=	LTO
 OPTIONS_DEFAULT=LTO
