--- a/audio/libbs2b/Makefile
+++ b/audio/libbs2b/Makefile
@@ -1,7 +1,11 @@
 PORTNAME=	libbs2b
-PORTVERSION=	3.1.0
+DISTVERSION=	3.1.0
+PORTREVISION=	1
 CATEGORIES=	audio
-MASTER_SITES=	SF/bs2b/${PORTNAME}/${PORTVERSION}
+MASTER_SITES=	SF/bs2b/${PORTNAME}/${DISTVERSION}
+
+PATCH_SITES=	https://github.com/alexmarsev/${PORTNAME}/commit/
+PATCHFILES=	5ca2d59888df047f1e4b028e3a2fd5be8b5a7277.patch:-p1
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Bauer Stereophonic-to-Binaural DSP
