--- a/net/py-s3cmd/Makefile
+++ b/net/py-s3cmd/Makefile
@@ -1,15 +1,15 @@
-# Created by: Gea-Suan Lin <gslin@gslin.org>
-
 PORTNAME=	s3cmd
-DISTVERSION=	2.1.0
+DISTVERSION=	2.4.0
+PORTREVISION=	2
 CATEGORIES=	net python
 MASTER_SITES=	SF/s3tools/${PORTNAME}/${DISTVERSION}
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Unix-like tools to manipulate stored files from the command line
+WWW=		https://s3tools.org/s3cmd
 
-LICENSE=	gpl2
+LICENSE=	gpl2+
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
 OPTIONS_SINGLE=	SG1
@@ -20,7 +20,7 @@ OPTIONS_DEFAULT=	MAGIC
 MAGIC_DESC=		Use devel/py-magic
 PYTHON_MAGIC_DESC=	Use devel/py-python-magic
 
-RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}dateutil>0:devel/py-dateutil@${PY_FLAVOR}
+RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}python-dateutil>0:devel/py-python-dateutil@${PY_FLAVOR}
 
 MAGIC_RUN_DEPENDS=		${PYTHON_PKGNAMEPREFIX}magic>0:devel/py-magic@${PY_FLAVOR}
 PYTHON_MAGIC_RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}python-magic>0:devel/py-python-magic@${PY_FLAVOR}
