add calibre and dependencies.

--- a/databases/Makefile
+++ b/databases/Makefile
@@ -146,6 +146,7 @@ SUBDIR += py-aiopg
 SUBDIR += py-aioredis
 SUBDIR += py-aiosqlite
 SUBDIR += py-alembic
+SUBDIR += py-apsw
 SUBDIR += py-berkeleydb
 SUBDIR += py-bsddb3
 SUBDIR += py-cassandra-driver
