--- a/devel/Makefile
+++ b/devel/Makefile
@@ -75,6 +75,7 @@ SUBDIR += cvsgraph
 SUBDIR += cvsps
 SUBDIR += cvsps-devel
 SUBDIR += cvsweb3
+SUBDIR += date
 SUBDIR += dbus
 SUBDIR += dbus-glib
 SUBDIR += dconf
@@ -1077,6 +1078,7 @@ SUBDIR += py-pathlib2
 SUBDIR += py-pathspec
 SUBDIR += py-pbr
 SUBDIR += py-pendulum
+SUBDIR += py-pep8-naming
 SUBDIR += py-phx-class-registry
 SUBDIR += py-poetry-core
 SUBDIR += py-pooch
