--- a/net/Makefile
+++ b/net/Makefile
@@ -161,6 +161,7 @@ SUBDIR += phpldapadmin
 SUBDIR += py-avahi
 SUBDIR += py-ec2-cli-tools
 SUBDIR += py-h11
+SUBDIR += py-ifaddr
 SUBDIR += py-mpi4py
 SUBDIR += py-netaddr
 SUBDIR += py-netifaces
@@ -183,6 +184,7 @@ SUBDIR += py-uritools
 SUBDIR += py-urllib3
 SUBDIR += py-url-normalize
 SUBDIR += py-wsproto
+SUBDIR += py-zeroconf
 SUBDIR += qt5-network
 SUBDIR += qt5-networkauth
 SUBDIR += qt6-networkauth
