--- a/www/Makefile
+++ b/www/Makefile
@@ -45,6 +45,7 @@ SUBDIR += linux-opera
 SUBDIR += lynx
 SUBDIR += man2web
 SUBDIR += mathjax
+SUBDIR += mathjax3
 SUBDIR += mattermost-server
 SUBDIR += mattermost-webapp
 SUBDIR += mediawiki135
@@ -171,6 +172,7 @@ SUBDIR += py-bottle
 SUBDIR += py-cachecontrol
 SUBDIR += py-cheroot
 SUBDIR += py-cherrypy
+SUBDIR += py-css-parser
 SUBDIR += py-cssselect
 SUBDIR += py-cssutils
 SUBDIR += py-dropbox
@@ -188,6 +190,7 @@ SUBDIR += py-gunicorn
 SUBDIR += py-h2
 SUBDIR += py-hpack
 SUBDIR += py-hstspreload
+SUBDIR += py-html5-parser
 SUBDIR += py-html5lib
 SUBDIR += py-httpbin
 SUBDIR += py-httpcore
@@ -207,6 +210,7 @@ SUBDIR += py-priority1
 SUBDIR += py-pyjwt
 SUBDIR += py-pylsqpack
 SUBDIR += py-python-dotenv
+SUBDIR += py-mechanize
 SUBDIR += py-multidict
 SUBDIR += py-qt5-webengine
 SUBDIR += py-qt6-webengine
