--- a/deskutils/Makefile
+++ b/deskutils/Makefile
@@ -3,6 +3,7 @@ COMMENT = Things that used to be on the desktop before computers were invented
 SUBDIR += affiche
 SUBDIR += appwrapper
 SUBDIR += baobab
+SUBDIR += calibre
 SUBDIR += cartotheque
 SUBDIR += displaycalibrator
 SUBDIR += glabels
