--- a/devel/py-iniconfig/Makefile
+++ b/devel/py-iniconfig/Makefile
@@ -1,14 +1,18 @@
 PORTNAME=	iniconfig
 DISTVERSION=	1.1.1
+PORTREVISION=	1
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Simple parsing of ini files in Python
+WWW=		https://pypi.org/project/iniconfig/
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/LICENSE
+
+BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools-scm>=3:devel/py-setuptools-scm@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent distutils
