--- a/mail/vrfy/Makefile
+++ b/mail/vrfy/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	vrfy
 PORTVERSION=	1.0
 DISTVERSIONPREFIX=v
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	mail
 
 MAINTAINER=	ports@MidnightBSD.org
@@ -11,10 +11,10 @@ USE_GITHUB=	yes
 GH_ACCOUNT=	asxe
 
 MAKE_ARGS=	CC="${CC}" CFLAGS="${CFLAGS}" RES=""
-PLIST_FILES=	bin/vrfy man/man1/vrfy.1.gz
+PLIST_FILES=	bin/vrfy share/man/man1/vrfy.1.gz
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/vrfy ${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/vrfy.1 ${PREFIX}/man/man1/
+	${INSTALL_MAN} ${WRKSRC}/vrfy.1 ${PREFIX}/share/man/man1/
 
 .include <bsd.port.mk>
