mail/faces: man

--- a/mail/faces/Makefile
+++ b/mail/faces/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	faces
 PORTVERSION=	1.7.7
-PORTREVISION=	1
+PORTREVISION=	2
 CATEGORIES=	mail
 MASTER_SITES=	SF
 
@@ -64,6 +64,10 @@ post-patch:
 do-build:
 	cd ${WRKSRC}/compface && ${SETENV} ${MAKE_ENV} ${MAKE} ${MAKE_FLAGS} \
 		${FILESDIR}/Makefile.compface ${MAKE_ARGS} ${ALL_TARGET}
+.if ${PORT_OPTIONS:MX11}
+	cd ${WRKSRC}/faces && ${SETENV} ${MAKE_ENV} ${MAKE} ${MAKE_FLAGS} \
+		${MAKEFILE} ${MAKE_ARGS} ${ALL_TARGET}
+.endif
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/compface/compface ${STAGEDIR}${PREFIX}/bin
@@ -74,10 +78,15 @@ do-install:
 	${LN} -sf libcompface.so.1 ${STAGEDIR}${PREFIX}/lib/libcompface.so
 	${INSTALL_MAN} ${WRKSRC}/compface/compface.1 ${STAGEDIR}${PREFIX}/share/man/man1
 	${INSTALL_MAN} ${WRKSRC}/compface/compface.3 ${STAGEDIR}${PREFIX}/share/man/man3
-	${INSTALL_SCRIPT} ${FILESDIR}/ikon2xbm ${PREFIX}/bin
-	${INSTALL_SCRIPT} ${FILESDIR}/xbm2ikon ${PREFIX}/bin
-	${INSTALL_SCRIPT} ${FILESDIR}/xbmcut48 ${PREFIX}/bin
-	${INSTALL_SCRIPT} ${FILESDIR}/xbmsize48 ${PREFIX}/bin
+	${INSTALL_SCRIPT} ${FILESDIR}/ikon2xbm ${STAGEDIR}${PREFIX}/bin
+	${INSTALL_SCRIPT} ${FILESDIR}/xbm2ikon ${STAGEDIR}${PREFIX}/bin
+	${INSTALL_SCRIPT} ${FILESDIR}/xbmcut48 ${STAGEDIR}${PREFIX}/bin
+	${INSTALL_SCRIPT} ${FILESDIR}/xbmsize48 ${STAGEDIR}${PREFIX}/bin
+.if ${PORT_OPTIONS:MX11}
+	${INSTALL_PROGRAM} ${WRKSRC}/faces/faces ${STAGEDIR}${PREFIX}/bin
+	${INSTALL_MAN} ${WRKSRC}/faces/faces.1 ${STAGEDIR}${PREFIX}/share/man/man1
+	${INSTALL_DATA} ${WRKSRC}/faces/Faces.ad ${STAGEDIR}${LOCALBASE}/lib/X11/app-defaults/Faces
+.endif
 	@${MKDIR} ${STAGEDIR}${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/README ${STAGEDIR}${DOCSDIR}
 
