add missing dependencies.

--- a/x11/Makefile
+++ b/x11/Makefile
@@ -37,6 +37,7 @@ SUBDIR += idesk
 SUBDIR += innerspace
 SUBDIR += keybinder
 SUBDIR += keybinder-gtk3
+SUBDIR += kf5-kwayland
 SUBDIR += libICE
 SUBDIR += libSM
 SUBDIR += libX11
@@ -115,6 +116,7 @@ SUBDIR += nvidia-settings
 SUBDIR += nvidia-xconfig
 SUBDIR += openrgb
 SUBDIR += pixman
+SUBDIR += plasma-wayland-protocols
 SUBDIR += py-python-xapp
 SUBDIR += py-xcffib
 SUBDIR += qimageblitz
