--- a/math/gnubc/Makefile
+++ b/math/gnubc/Makefile
@@ -19,8 +19,8 @@ INFO=		bc \
 		dc
 PLIST_FILES=	bin/bc \
 		bin/dc \
-		man/man1/bc.1.gz \
-		man/man1/dc.1.gz
+		share/man/man1/bc.1.gz \
+		share/man/man1/dc.1.gz
 PORTEXAMPLES=	ckbook.b \
 		pi.b \
 		primes.b \
