--- a/misc/mbuffer/Makefile
+++ b/misc/mbuffer/Makefile
@@ -13,6 +13,7 @@ LICENSE_FILE=	${WRKSRC}/LICENSE
 USES=		localbase ssl tar:tgz autoreconf gmake
 
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
 
 OPTIONS_DEFINE=		GCRYPT MHASH RHASH
 OPTIONS_DEFAULT=	MHASH
