--- a/misc/mc/Makefile
+++ b/misc/mc/Makefile
@@ -24,6 +24,7 @@ SHEBANG_FILES=	${WRKSRC}/src/vfs/extfs/helpers/s3+.in \
 python_OLD_CMD=	@PYTHON@
 USE_GNOME=	glib20
 GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=	${PREFIX}/share
 CONFIGURE_ENV=	ZIP=${LOCALBASE}/bin/zip UNZIP=${UNZIP_NATIVE_CMD}
 
 PORTDOCS=	AUTHORS FAQ HACKING MAINTAINERS NEWS README TODO
