--- a/graphics/vigra/Makefile
+++ b/graphics/vigra/Makefile
@@ -1,5 +1,3 @@
-# Created by: cartola (Carlos E. G. Carvalho)
-
 PORTNAME=	vigra
 DISTVERSIONPREFIX=v
 DISTVERSION=	1.11.1
@@ -8,6 +6,7 @@ CATEGORIES=	graphics
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	VIGRA stands for "Vision with Generic Algorithms"
+WWW=		https://ukoethe.github.io/vigra/
 
 LICENSE=	mit
 
@@ -35,6 +34,7 @@ OPTIONS_GROUP=		IMAGEFORMATS
 OPTIONS_GROUP_IMAGEFORMATS=	PNG JPEG TIFF
 OPTIONS_SUB=		yes
 
+HDF5_CFLAGS=		-DH5_USE_110_API=1
 HDF5_CMAKE_BOOL=	WITH_HDF5
 HDF5_LIB_DEPENDS=	libhdf5.so:science/hdf5
 
