--- a/lang/tcl86/Makefile
+++ b/lang/tcl86/Makefile
@@ -1,47 +1,62 @@
 PORTNAME=	tcl
-PORTVERSION=	8.6.9
+DISTVERSION=	${TCL_VERSION}${TCL_RC}
+PORTREVISION=	2
 CATEGORIES=	lang
-MASTER_SITES=	SF/tcl/Tcl/${PORTVERSION} \
-		TCLTK/tcl8_6
-PKGNAMESUFFIX=	${PORTVERSION:R:S/.//}
-DISTNAME=	${PORTNAME}${PORTVERSION}-src
+MASTER_SITES=	SF/tcl/Tcl/${TCL_VERSION}
+PKGNAMESUFFIX=	${SHORT_TCL_VER}
+DISTNAME=	${PORTNAME}${DISTVERSION}-src
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Tool Command Language
+WWW=		https://www.tcl.tk/
 
 LICENSE=	TclTk
 LICENSE_NAME=	Tcl/Tk License
 LICENSE_FILE=	${WRKSRC}/../license.terms
 LICENSE_PERMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 
+USES=		cpe
+
+USE_LDCONFIG=	yes
+GNU_CONFIGURE=	yes
+GNU_CONFIGURE_MANPREFIX=${PREFIX}/share
+CONFIGURE_ARGS=	--enable-shared \
+		--enable-man-suffix=.${MAN_SUFFIX} \
+		--includedir=${PREFIX}/include/tcl${TCL_VER}
+CONFIGURE_ENV=	PORTSDIR=${PORTSDIR}
+LDFLAGS+=	-Wl,-z,muldefs
+
 OPTIONS_DEFINE=	TCLMAN TZDATA THREADS DEBUG
-OPTIONS_DEFAULT=THREADS
+OPTIONS_DEFINE_amd64=	DTRACE
+OPTIONS_DEFINE_powerpc64=	DTRACE
+OPTIONS_DEFINE_powerpc64le=	DTRACE
+OPTIONS_DEFAULT=TCLMAN TZDATA THREADS
+OPTIONS_DEFAULT_amd64=	DTRACE
+OPTIONS_DEFAULT_powerpc64=	DTRACE
+OPTIONS_DEFAULT_powerpc64le=	DTRACE
 TCLMAN_DESC=	Install Tcl function manpages
 TZDATA_DESC=	Install Tcl timezone data
 OPTIONS_SUB=	yes
 
-PATCH_WRKSRC=	${WRKDIR}/${PORTNAME}${PORTVERSION}
-WRKSRC=		${WRKDIR}/${PORTNAME}${PORTVERSION}/unix
+.if !exists(/usr/sbin/dtrace)
+OPTIONS_EXCLUDE+=	DTRACE
+.endif
+
+PATCH_WRKSRC=	${WRKDIR}/${PORTNAME}${TCL_VERSION}
+WRKSRC=		${PATCH_WRKSRC}/unix
 
 ALL_TARGET=	all
-INSTALL_TARGET=	install-strip install-libraries install-modules
-#TEST_TARGET=	test-tcl
-NO_TEST=	yes
+INSTALL_TARGET=	install-strip install-libraries install-private-headers
+TEST_TARGET=	test-tcl
 
-USE_LDCONFIG=	yes
-GNU_CONFIGURE=	yes
-CONFIGURE_ARGS=	--enable-shared \
-		--enable-man-suffix=.${MAN_SUFFIX} \
-		--includedir=${PREFIX}/include/tcl${TCL_VER} \
-CONFIGURE_ENV=	PORTSDIR=${PORTSDIR}
-
-TCL_VER=	${PORTVERSION:R}
+TCL_VERSION=	8.6.14
+TCL_VER=	${TCL_VERSION:R}
+TCL_RC=
 SHORT_TCL_VER=	${TCL_VER:S/.//}
 MAN_SUFFIX=	${PKGBASE}
 
 MAKE_ENV=	SHORT_TCL_VER=${SHORT_TCL_VER} \
-		MAN_SUFFIX=.${MAN_SUFFIX} \
-		LANG=C LC_ALL=C	# LANG=C is required for some of UTF-using tests
+		MAN_SUFFIX=.${MAN_SUFFIX}
 
 PLIST_SUB=	TCL_VER=${TCL_VER} \
 		SHORT_TCL_VER=${SHORT_TCL_VER}
@@ -59,11 +74,11 @@ post-patch:
 	     s|@TCL_BUILD_STUB_LIB_SPEC@|@TCL_STUB_LIB_SPEC@|; \
 	     s|@TCL_BUILD_STUB_LIB_PATH@|@TCL_STUB_LIB_PATH@|; \
 	     s|@TCL_SRC_DIR@|${PREFIX}/include/tcl${TCL_VER}|' \
-	     ${WRKSRC}/tclConfig.sh.in
-.if !${PORT_OPTIONS:MTCLMAN}
-	@${FIND} ${WRKSRC}/../pkgs -name Makefile.in | ${XARGS} ${REINPLACE_CMD} \
+	     ${PATCH_WRKSRC}/unix/tclConfig.sh.in
+
+post-patch-TCLMAN-off:
+	@${FIND} ${PATCH_WRKSRC}/pkgs -name Makefile.in | ${XARGS} ${REINPLACE_CMD} \
 	    -e '/^install:/s|install-doc||'
-.endif
 
 post-configure:
 	${REINPLACE_CMD} \
