--- a/cad/Makefile
+++ b/cad/Makefile
@@ -3,6 +3,7 @@
     SUBDIR += cascade
     SUBDIR += gdsreader
     SUBDIR += xcircuit
+    SUBDIR += xyce
     SUBDIR += z88
 
 .include <bsd.port.subdir.mk>
