--- a/cad/Makefile
+++ b/cad/Makefile
@@ -2,6 +2,7 @@
 
     SUBDIR += cascade
     SUBDIR += gdsreader
+    SUBDIR += veroroute
     SUBDIR += xcircuit
     SUBDIR += xyce
     SUBDIR += z88
