devel/p5-Storable: license

--- a/devel/p5-Storable/Makefile
+++ b/devel/p5-Storable/Makefile
@@ -8,7 +8,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Persistency for perl data structures
 WWW=		https://metacpan.org/release/Storable
 
-LICENSE=	artistic gpl
+LICENSE=	artistic gpl+
 LICENSE_COMB=	dual
 
 USES=		perl5
