--- a/graphics/mozjpeg/Makefile
+++ b/graphics/mozjpeg/Makefile
@@ -19,7 +19,8 @@ CMAKE_ARGS=	-DCMAKE_INSTALL_MANDIR=${PREFIX}/share/man
 CMAKE_OFF=	REQUIRE_SIMD WITH_12BIT WITH_ARITH_DEC WITH_ARITH_ENC WITH_FUZZ WITH_JAVA WITH_JPEG7
 CMAKE_ON=	ENABLE_SHARED ENABLE_STATIC FORCE_INLINE PNG_SUPPORTED WITH_JPEG8 WITH_MEM_SRCDST WITH_SIMD WITH_TURBOJPEG
 #PIE_UNSAFE=	yes
-TEST_TARGET=	test
+#TEST_TARGET=	test
+NO_TEST=	yes
 USE_LDCONFIG=	yes
 
 CONFLICTS_INSTALL=	jpeg-turbo
