--- a/math/gmm++/Makefile
+++ b/math/gmm++/Makefile
@@ -1,16 +1,18 @@
-
-
 PORTNAME=	gmm++
-PORTVERSION=	4.2
+PORTVERSION=	5.4.2
 CATEGORIES=	math
-MASTER_SITES=	http://download.gna.org/getfem/stable/
+MASTER_SITES=	http://download-mirror.savannah.gnu.org/releases/getfem/stable/
 DISTNAME=	${PORTNAME:S/+//g}-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	A generic matrix template library
+COMMENT=	Generic matrix template library
+WWW=		https://getfem.org/gmm/
+
 LICENSE=	lgpl3
+LICENSE_FILE=	${WRKSRC}/COPYING
 
 GNU_CONFIGURE=	yes
+NO_ARCH=	yes
 NO_BUILD=	yes
 
 .include <bsd.port.mk>
