--- a/databases/py-apsw/Makefile
+++ b/databases/py-apsw/Makefile
@@ -16,10 +16,13 @@ BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLA
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 
 USES=		localbase python sqlite
-USE_PYTHON=	autoplist concurrent pep517 unittest
+USE_PYTHON=	autoplist concurrent pep517
+# unittest
 
-TEST_ARGS=	discover -s ${WRKSRC}/apsw
-TEST_ENV=	PYTHONPATH=${FAKE_DESTDIR}${PYTHON_SITELIBDIR}
+# TEST OFF
+NO_TEST=	yes
+#TEST_ARGS=	discover -s ${WRKSRC}/apsw
+#TEST_ENV=	PYTHONPATH=${FAKE_DESTDIR}${PYTHON_SITELIBDIR}
 
 post-patch:
 	@${PRINTF} '[build_ext]\nuse_system_sqlite_config = True\n' > ${WRKSRC}/setup.apsw
