security/pam_yubico: man

--- a/security/pam_yubico/Makefile
+++ b/security/pam_yubico/Makefile
@@ -5,6 +5,7 @@ MASTER_SITES=	https://developers.yubico.com/yubico-pam/Releases/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	PAM module for authenticating with a Yubico YubiKey
+WWW=		https://developers.yubico.com/yubico-pam/
 
 LICENSE=	bsd2
 LICENSE_FILE=	${WRKSRC}/COPYING
@@ -18,7 +19,7 @@ TEST_TARGET=	check
 NO_TEST=yes
 
 PLIST_FILES=	lib/security/pam_yubico.so \
-		man/man8/pam_yubico.8.gz
+		share/man/man8/pam_yubico.8.gz
 SUB_FILES=	pkg-message
 PORTDOCS=	*
 
@@ -29,7 +30,7 @@ OPTIONS_DEFAULT=	CR
 CR_CONFIGURE_WITH=	cr
 CR_LIB_DEPENDS=	libykpers-1.so:security/ykpers
 CR_PLIST_FILES=	bin/ykpamcfg \
-		man/man1/ykpamcfg.1.gz
+		share/man/man1/ykpamcfg.1.gz
 
 LDAP_CONFIGURE_WITH=	ldap
 LDAP_USE=	OPENLDAP=yes
