--- a/devel/Makefile
+++ b/devel/Makefile
@@ -855,6 +855,7 @@ SUBDIR += py-QtPy
 SUBDIR += py-aiosignal
 SUBDIR += py-amalgamate
 SUBDIR += py-aniso8601
+SUBDIR += py-antlr4-python3-runtime
 SUBDIR += py-anyio
 SUBDIR += py-apipkg
 SUBDIR += py-apispec
