ftp/py-tftpy: lic

--- a/ftp/py-tftpy/Makefile
+++ b/ftp/py-tftpy/Makefile
@@ -9,7 +9,7 @@ COMMENT=	Pure Python TFTP library
 WWW=		https://github.com/msoulier/tftpy
 
 LICENSE=	mit
-LICENSE_FILE=	${WRKSRC}/COPYING
+LICENSE_FILE=	${WRKSRC}/LICENSE
 
 BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
