net/htpdate: fix typo

--- a/net/htpdate/Makefile
+++ b/net/htpdate/Makefile
@@ -31,7 +31,7 @@ do-install:
 	${INSTALL_MAN} ${WRKSRC}/${PORTNAME}.8 ${STAGEDIR}${PREFIX}/share/man/man8
 
 post-install-DOCS-on:
-	${MKDIR} ${FAKE_DESTEDIR}${DOCSDIR}
+	${MKDIR} ${FAKE_DESTDIR}${DOCSDIR}
 .for doc in ${PORTDOCS}
 	${INSTALL_DATA} ${WRKSRC}/${doc} ${FAKE_DESTDIR}${DOCSDIR}
 .endfor
