net/rabbitmq-c: no test

--- a/net/rabbitmq-c/Makefile
+++ b/net/rabbitmq-c/Makefile
@@ -19,14 +19,13 @@ USE_LDCONFIG=	yes
 
 CMAKE_ON=	BUILD_TOOLS
 CMAKE_OFF=	BUILD_EXAMPLES
-TEST_TARGET=	test
 
-OPTIONS_DEFINE=		STATIC TEST
+NO_TEST=	yes
+
+OPTIONS_DEFINE=		STATIC
 OPTIONS_DEFAULT=	STATIC
 OPTIONS_SUB=		yes
 
 STATIC_CMAKE_BOOL=	BUILD_STATIC_LIBS
-TEST_IMPLIES=		STATIC
-TEST_CMAKE_BOOL=	BUILD_TESTING
 
 .include <bsd.port.mk>
